<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>auto_apms_examples</name>
    <version>0.0.0</version>
    <description>Examples for auto-apms repository</description>
    <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>auto_apms_util</depend>
    <depend>auto_apms_interfaces</depend>
    <depend>auto_apms_behavior_tree</depend>
    <depend>auto_apms_mission</depend>

    <!-- Needs to be mentioned in dependencies because BT node metadata generation relies on nodes from this package -->
    <depend>auto_apms_px4</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
