<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>auto_apms_interfaces</name>
    <version>0.0.0</version>
    <description>Interfaces for the auto-apms repository</description>
    <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
    <license>Apache License 2.0</license>
    <url>https://robin-mueller.github.io/auto-apms-guide/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>action_msgs</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
