<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>auto_apms_interfaces</name>
    <version>1.2.0</version>
    <description>ROS 2 interfaces for AutoAPMS</description>
    <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
    <license>Apache-2.0</license>
    <url>https://autoapms.github.io/auto-apms-guide/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
