<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_apms_mission</name>
  <version>0.0.0</version>
  <description>Implementation of AutoAPMS's mission management framework</description>
  <maintainer email="mue.robin@icloud.com">Robin Müller</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>auto_apms_behavior_tree</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
